youfull/objects/ALM_Global_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Holds global settings that apply across the entire application.</description>
    <fields>
        <fullName>API_Endpoint_Base_URL__c</fullName>
        <label>API Endpoint Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Alert_Template_Id__c</fullName>
        <label>Action_Alert_Template_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Delay_Mins__c</fullName>
        <label>Activation Delay Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activation_Key__c</fullName>
        <label>Activation Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activation_Username__c</fullName>
        <label>Activation Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genealogy_Cleanup_Mail__c</fullName>
        <inlineHelpText>Email for Genealogy Cleaup Notification in case of Success &amp; Errors</inlineHelpText>
        <label>Genealogy Cleanup Mail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genealogy_Page_Size__c</fullName>
        <label>Genealogy_Page_Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Escalation_BatchJob_Interval_Mins__c</fullName>
        <description>Specifies the interval between two consecutive executions of LeadEscalationBatch class.</description>
        <inlineHelpText>Specifies the interval between two consecutive executions of LeadEscalationBatch class.</inlineHelpText>
        <label>Lead Escalation BatchJob Interval (Mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Metrics_BatchJob_Interval_Mins__c</fullName>
        <description>Specifies the interval between two consecutive executions of LeadMetricsBatch class.</description>
        <inlineHelpText>Specifies the interval between two consecutive executions of LeadMetricsBatch class.</inlineHelpText>
        <label>Lead Metrics BatchJob Interval (Mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Metrics_Batch_Size__c</fullName>
        <description>Used by LeadMetricsBatch apex class to specify the batch size for the job</description>
        <inlineHelpText>Used by LeadMetricsBatch apex class to specify the batch size for the job</inlineHelpText>
        <label>Lead Metrics Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Personal_Email_Template_Id__c</fullName>
        <label>Lead Personal Email Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Endpoint__c</fullName>
        <label>Login Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_User_Reports__c</fullName>
        <label>Max User Reports</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Queue_Email_Service_Address__c</fullName>
        <description>Email address that belongs to &quot;NotificationQueueEmailService&quot; class. This is different for various environments.</description>
        <inlineHelpText>Email address that belongs to &quot;NotificationQueueEmailService&quot; class</inlineHelpText>
        <label>Notification Queue Email Service Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Omniture_Tracking_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Omniture Tracking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Email_Template_Id__c</fullName>
        <label>Personal Email Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Time_Activation_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Time Activation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Page_Size__c</fullName>
        <label>Report Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shared_Secret__c</fullName>
        <label>Shared Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Url__c</fullName>
        <label>Site Url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_Postfix__c</fullName>
        <label>Username_Postfix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Widget_Lifetime__c</fullName>
        <label>Widget Lifetime</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ALM Global Settings</label>
</CustomObject>